<resources>
    <string name="app_name">Foodle</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="chao_mung_tro_lai">Chào mừng trở lại</string>
    <string name="dang_nhap_vao_tk">đăng nhập vào tài khoản của bạn</string>
    <string name="sdt">Số điện thoại</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="chua_co_tai_khoan">Chưa có tài khoản?</string>
    <string name="dang_ky_ngay">Đăng ký ngay</string>
    <string name="or_dang_nhap_voi">hoặc đăng nhập với</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="ten_cua_ban">Tên của bạn</string>
    <string name="chua_co_tk">Chưa có tài khoản?</string>
    <string name="dang_ky_ngay_nao">đăng ký ngay nào!</string>
    <string name="dang_ky">ĐĂNG KÝ</string>
    <string name="da_co_tk">Đã có tài khoản?</string>
    <string name="or_dang_ky_voi">hoặc đăng ký với</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Nhà</string>
    <string name="food_list">Chọn món</string>
    <string name="my_cart">Giỏ hàng</string>
    <string name="myAccount">Tôi</string>
    <string name="delivery_to">Vận chuyển đến</string>
    <string name="location_example">Hoàng Diệu, Hải Châu, Đà Nẵng</string>
    <string name="hint_search">Tìm kiếm đồ uống, ăn nhẹ</string>
    <string name="text_button">Chọn món</string>
    <string name="goi_y_rieng">Gợi ý riêng cho bạn</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="them_vao_gio">Thêm vào giỏ</string>
    <string name="detail_product">Chi tiết sản phẩm</string>
    <string name="chon_size">Chọn size</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="mo_ta">Mô tả</string>
    <string name="food_description">Caramel Macchiato sẽ mang đến một sự ngạc nhiên thú vị khi vị thơm béo của bọt sữa, sữa tươi, vị đắng thanh thoát của cà phê Espresso hảo hạng và vị ngọt đậm của sốt caramel được gói gọn trong một tách cà phê.</string>
    <string name="food_name">Caramel Macchiato đá</string>
    <string name="food_price">55.000đ</string>
    <string name="so_luong">Số lượng</string>
    <string name="tong_thanh_toan">Tổng thanh toán</string>
    <string name="thanh_toan">THANH TOÁN</string>
    <string name="gio_hang_cua_ban">Giỏ hàng của bạn</string>
    <string name="check_out">Thanh toán</string>
    <string name="title_voucher">Voucher khuyến mãi</string>
    <string name="voucher_example">Mua 1 tặng 1 dành cho khách hàng mới</string>
    <string name="dat_hang">ĐẶT HÀNG</string>
    <string name="tong_cong_sp">Tổng cộng sản phẩm</string>
    <string name="phi_giao_hang">Phí giao hàng</string>
    <string name="giam_gia_voucher">Giảm giá voucher</string>
    <string name="thong_tin_nguoi_nhan">Thông tin người nhận</string>
    <string name="hint_take_note">Nhập ghi chú tại đây...</string>
    <string name="danh_sach_sp">Danh sách sản phẩm</string>
    <string name="ghi_chu_dh">Ghi chú đơn hàng</string>
    <string name="name_acc_test">Alexander Hipp</string>
    <string name="txt_ranking">Khách hàng tiềm năng</string>
    <string name="lich_su_don_hang">Lịch sử đơn hàng</string>
    <string name="my_voucher">Voucher của tôi</string>
    <string name="list_favorite">Sản phẩm yêu thích</string>
    <string name="my_notification">Thông báo của tôi</string>
    <string name="contact">Liên hệ và góp ý</string>
    <string name="my_info">Thông tin cá nhân</string>
    <string name="saved_location">Địa chỉ đã lưu</string>
    <string name="txt_settings">Cài đặt</string>
    <string name="uu_dai_van_chuyen">Ưu đãi phí vận chuyển</string>
    <string name="uu_dai_giam_gia">Ưu đãi giảm giá</string>
    <string name="sai_password">Sai mật khẩu!</string>
    <string name="so_dt_da_sdung">Số đã được sử dụng!</string>
    <string name="do_dai_khong_hople">Độ dài không hợp lệ!</string>
    <string name="quantity">Số lượng:</string>

</resources>