<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.042" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.958" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/chao_mung_tro_lai"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/dang_nhap_vao_tk"
            android:textColor="@color/colorTextSecond"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36sdp"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/sdt"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/input_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/mat_khau"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_13sdp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp">

            <CheckBox
                android:id="@+id/cb_rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:includeFontPadding="false"
                android:text="Ghi nhớ tôi"
                android:textSize="@dimen/_12ssp"
                android:buttonTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_forgetPassword"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:includeFontPadding="false"
                android:text="Quên mật khẩu"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cb_rememberMe"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/inter_bold"
            android:text="@string/dang_nhap"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_regular"
                android:text="@string/chua_co_tai_khoan"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextPrimary"/>

            <TextView
                android:id="@+id/txt_signUpNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/dang_ky_ngay"
                android:textAllCaps="true"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_regular"
            android:text="@string/or_dang_nhap_voi"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/colorTextSecond"
            android:layout_gravity="center_horizontal"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/layout_btn_facebook"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_48sdp"
                android:background="@drawable/background_input"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layout_btn_google"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/facebook"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_google"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_48sdp"
                android:background="@drawable/background_input"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/layout_btn_facebook"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/google"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>