<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FoodDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top_heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_gravity="top">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.042" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.958" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/guidelineStart2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:includeFontPadding="false"
            android:text="@string/detail_product"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_favorite"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/image_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

        <ImageView
            android:id="@+id/image_favorite"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_menu_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorTextPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_55sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_24sdp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.042" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.958" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_food"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_food_item"
                app:riv_corner_radius="@dimen/_15sdp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/guidelineStart1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_foodName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/food_name"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@id/image_food"
                app:layout_constraintStart_toStartOf="@id/guidelineStart1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"/>

            <TextView
                android:id="@+id/txt_desc_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_medium"
                android:text="@string/mo_ta"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintTop_toBottomOf="@id/txt_foodName"
                app:layout_constraintStart_toStartOf="@id/guidelineStart1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"/>

            <TextView
                android:id="@+id/food_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_regular"
                android:text="@string/food_description"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextSecond"
                android:textAlignment="textStart"
                app:layout_constraintTop_toBottomOf="@id/txt_desc_title"
                app:layout_constraintStart_toStartOf="@id/guidelineStart1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"/>

            <TextView
                android:id="@+id/txt_pick_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/inter_medium"
                android:includeFontPadding="false"
                android:text="@string/chon_size"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd1"
                app:layout_constraintStart_toStartOf="@id/guidelineStart1"
                app:layout_constraintTop_toBottomOf="@id/food_description" />

            <LinearLayout
                android:id="@+id/layout_choose_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/txt_pick_size"
                app:layout_constraintStart_toStartOf="@id/guidelineStart1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd1">

                <RadioGroup
                    android:id="@+id/rg_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_size_s"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/inter_medium"
                        android:checked="true"
                        android:text="@string/s"
                        android:textSize="@dimen/_14ssp"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_radio"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"/>

                    <RadioButton
                        android:id="@+id/radio_size_m"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/m"
                        android:textSize="@dimen/_14ssp"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_radio"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"/>

                    <RadioButton
                        android:id="@+id/radio_size_l"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/l"
                        android:textAlignment="center"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@drawable/text_color_radio"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"/>

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_pick_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/inter_medium"
                android:includeFontPadding="false"
                android:text="@string/so_luong"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@id/guidelineStart1"
                app:layout_constraintTop_toBottomOf="@id/layout_choose_size" />

            <LinearLayout
                android:id="@+id/layout_elegant_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
                app:layout_constraintTop_toTopOf="@id/txt_pick_quantity"
                app:layout_constraintBottom_toBottomOf="@id/txt_pick_quantity">

                <ImageView
                    android:id="@+id/image_decrease"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_subtraction"/>

                <TextView
                    android:id="@+id/txt_quantity"
                    android:layout_width="wrap_content"
                    android:maxEms="3"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/inter_medium"
                    android:text="1"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/colorTextSecond"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/image_increase"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_add"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_gravity="bottom"
        android:background="@drawable/background_bottom_nav">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.042" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.958" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:includeFontPadding="false"
            android:text="@string/tong_tien"
            android:textColor="@color/colorTextSecond"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/txt_totalMoney"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_totalMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/food_price"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_cart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/txt_total" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/them_vao_gio"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/txt_totalMoney"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>